@@ -42,6 +42,7 @@
             <modules>
                 <module>master</module>
                 <module>admin-tools</module>
+                <module>admin-su</module>
                 <module>access</module>
                 <module>announcement</module>
                 <module>archive</module>
@@ -67,7 +68,6 @@
                 <module>entitybroker</module>
                 <module>external-calendaring-service</module>
                 <module>feedback</module>
-                <module>gradebook</module>
                 <module>gradebookng</module>
                 <module>help</module>
                 <module>hierarchy</module>
@@ -111,7 +111,6 @@
                 <module>syllabus</module>
                 <module>taggable</module>
                 <module>textarea</module>
-                <module>tool</module>
                 <module>user</module>
                 <module>userauditservice</module>
                 <module>usermembership</module>
@@ -126,6 +125,7 @@
             <modules>
                 <module>master</module>
                 <module>access</module>
+                <module>admin-su</module>
                 <module>announcement</module>
                 <module>archive</module>
                 <module>assignment</module>
@@ -152,7 +152,7 @@
                 <module>evaluation</module>
                 <module>external-calendaring-service</module>
                 <module>formbuilder</module>
-                <module>gradebook</module>
+                <module>gradebook1</module>
                 <module>help</module>
                 <module>hierarchy</module>
                 <module>jobscheduler</module>
@@ -194,7 +194,6 @@
                 <module>syllabus</module>
                 <module>taggable</module>
                 <module>textarea</module>
-                <module>tool</module>
                 <module>user</module>
                 <module>userauditservice</module>
                 <module>usermembership</module>
@@ -238,26 +237,5 @@
                 <module>pack/pack-src</module>
             </modules>
         </profile>
-
     </profiles>
-    <reporting>
-        <plugins>
-            <plugin>
-                <!-- javadocs -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8.1</version>
-                <configuration>
-                    <debug>true</debug>
-                    <links>
-                        <link>http://download.oracle.com/javase/6/docs/api/</link>
-                    </links>
-                    <breakiterator>true</breakiterator>
-                    <verbose>false</verbose>
-                    <maxmemory>1024m</maxmemory>
-                    <additionalJOption>-J-Xms168m -J-Xmx1024m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
 </project>
